crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-multi_embeddings_megascience_vector_search_sql_vectors_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                        |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                                                                                                                                                                        |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, array_length(vector_search(qs, Utf8("second"), answer).answer_embedding), trunc(vector_search(qs, Utf8("second"), answer).score, Int64(3)) AS score                           |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[answer, answer_embedding, id, score]                                                                                                                                                                                   |
| physical_plan | SortPreservingMergeExec: [score@3 DESC, id@0 DESC], fetch=4                                                                                                                                                                                                                                 |
|               |   SortExec: TopK(fetch=4), expr=[score@3 DESC, id@0 DESC], preserve_partitioning=[true]                                                                                                                                                                                                     |
|               |     ProjectionExec: expr=[id@2 as id, answer@0 as answer, array_length(answer_embedding@1) as array_length(vector_search(qs, Utf8("second"), answer).answer_embedding), trunc(score@3, 3) as score]                                                                                         |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                  |
|               |         ProjectionExec: expr=[answer@3 as answer, answer_embedding@1 as answer_embedding, id@0 as id, score@2 as score]                                                                                                                                                                     |
|               |           HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, answer_embedding@1, score@2, answer@3]                                                                                                                    |
|               |             CoalescePartitionsExec                                                                                                                                                                                                                                                          |
|               |               ProjectionExec: expr=[CAST(key@1 AS Int64) as id, data@0 as answer_embedding, 1 - distance@2 as score]                                                                                                                                                                        |
|               |                 CooperativeExec                                                                                                                                                                                                                                                             |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                      |
|               |                     BytesProcessedExec                                                                                                                                                                                                                                                      |
|               |                       CooperativeExec                                                                                                                                                                                                                                                       |
|               |                         S3VectorsQueryExec (spice-ci-tests-s3-vectors/cayenne-dataset-multi-embeddings-0): limit=100                                                                                                                                                                        |
|               |             SchemaCastScanExec                                                                                                                                                                                                                                                              |
|               |               CayenneAccelerationExec                                                                                                                                                                                                                                                       |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                          |
|               |                   DataSourceExec: file_groups={1 group: [[<NORMALIZED_PATH>/.vortex]]}, projection=[answer, id], file_type=vortex |
|               |                                                                                                                                                                                                                                                                                             |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
