crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-text_search_metadata_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
        ]
      },
      "primary_key": {
        "id": 525
      },
      "_score": 6.33
    },
    {
      "data": {
        "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\)."
        ]
      },
      "primary_key": {
        "id": 772
      },
      "_score": 6.19
    }
  ]
}
