crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-text_search_metadata_megascience_vector_search_sql_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(score, 3) as score  FROM vector_search(qs, 'second', answer) order by score desc, id desc LIMIT 4;"
snapshot_kind: text
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
